test/cr/fortio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fortio-${REV}
  labels:
    istio.io/rev: ${REV}
---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: fortio-cli
#  namespace: fortio
#  annotations:
#      sidecar.istio.io/logLevel: info
#      sidecar.istio.io/debug: token:debug
#      sidecar.istio.io/proxyImage: costinm/proxyv2:cr
#      sidecar.istio.io/proxyCPU: 10m
#spec:
#  containers:
#    - name: app
#      image: costinm/fortio:latest
#      args:
#        - load
#        - -allow-initial-errors
#        - -t
#        - "0"
#        - -abort-on
#        - "123"
#        - -allow-initial-errors
#        - -c
#        - "1"
#        - -qps
#        - "1"
#        - http://fortio:8080/echo?size=5000
#      env:
#          - name: istio
#            value: ${REV}
#      resources:
#          requests:
#            cpu: 10m
#          limits:
#            cpu: 800m

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-cli
  namespace: fortio-${REV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-cli
  template:
    metadata:
      name: fortio-cli
      namespace: fortio
      labels:
        app: fortio-cli
      annotations:
        sidecar.istio.io/logLevel: info
        sidecar.istio.io/debug: token:debug
        sidecar.istio.io/proxyImage: costinm/proxyv2:cr
        sidecar.istio.io/proxyCPU: 10m
    spec:
      containers:
        - name: app
          image: costinm/fortio:latest
          args:
            - load
            - -allow-initial-errors
            - -t
            - "0"
            - -abort-on
            - "123"
            - -allow-initial-errors
            - -c
            - "1"
            - -qps
            - "1"
            - http://fortio:8080/echo?size=5000
          env:
            - name: istio
              value: ${REV}
          resources:
            requests:
              cpu: 10m
            limits:
              cpu: 800m

---
apiVersion: v1
kind: Service
metadata:
  name: fortio
  namespace: fortio-${REV}
  labels:
    app: fortio
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: fortio
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: fortio-${REV}
spec:
  egress:
    - hosts:
        - "./*"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio
  namespace: fortio-${REV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      labels:
        app: fortio
        version: v1
      annotations:
        sidecar.istio.io/logLevel: info
        #sidecar.istio.io/componentLogLevel: token:debug
        sidecar.istio.io/debug: token:debug
        sidecar.istio.io/proxyImage: costinm/proxyv2:asm
        sidecar.istio.io/proxyCPU: 10m
    spec:
      containers:
       -  name: app
          image: "costinm/fortio:latest"
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8079
          args:
            - server
          env:
            - name: istio
              value: ${REV}
          resources:
            requests:
              cpu: 10m
              memory: "128Mi"
            limits:
              cpu: 1000m
              memory: "1G"

#kubectl -n fortio exec -it prober -- curl httpbin:8000
#
