test/cr/mesh_template.yaml
# Mesh config overrides, located on ./etc/istio/config/mesh
# Docker will use an env to override.

enablePrometheusMerge: true
defaultConfig:
  proxyMetadata: {}
  discoveryAddress: "${K_SERVICE}${ISTIOD_DOMAIN}:443"
  tracing: {}
