test/cr/mutating_all.yaml
# Exclude pods with the 'inject' annotation set to false.
# Let webhook decide for the rest, based on its own config - which may
# have explicit list of namespaces to exclude / include
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: istiod-debug
webhooks:
  - name: debug-injector.istio.io
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      url: https://istiod-icq63pqnqq-uc.a.run.app/inject/test
    sideEffects: None
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    objectSelector:
      matchExpressions:
        - key: "sidecar.istio.io/inject"
          operator: NotIn
          values:
            - "false"
