test/cr/mutating_nslabel.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: istiod-managed
webhooks:
  - name: managed-injector.istio.io
    clientConfig:
      url: https://istiod-costin-asm1-big1-icq63pqnqq-uc.a.run.app/inject/test
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: istio-injection
          operator: DoesNotExist
        - key: istio.io/rev
          operator: In
          values:
            - managed
    objectSelector:
      matchExpressions:
        - key: "sidecar.istio.io/inject"
          operator: NotIn
          values:
            - "false"
